# projecteuler

./: .gitignore  LICENSE  README.md  build.sh
helloworld/: README.md  main.c
helloworld/test/: test.c
problem1/: README.md  main.c
problem2/: README.md  main.c
problem3/: CMakeLists.txt  README.md  build.sh  log_limits.c  main.c  primes.c  primes.h  util.c
problem3/test/: CMakeLists.txt  test.c
problem4/: CMakeLists.txt  README.md  main.c  palindrome.c
problem4/test/: CMakeLists.txt  test.c
problem5/: CMakeLists.txt  README.md  main.c
problem6/: README.md
problem951/: CMakeLists.txt  CMakePresets.json  README.md  fs_util.c  fs_util.h  main.c  problem951.c  problem951.h
problem951/doc/solution_for_n_2/: game_tree_0.dot.gv  game_tree_1.dot.gv  game_tree_2.dot.gv
problem951/doc/solution_for_n_3/: game_tree_0.dot.gv  game_tree_1.dot.gv  game_tree_2.dot.gv  game_tree_3.dot.gv  game_tree_4.dot.gv  game_tree_5.dot.gv  game_tree_6.dot.gv  game_tree_7.dot.gv  game_tree_8.dot.gv  game_tree_9.dot.gv
problem951/doc/solution_for_n_4/: game_tree_0.dot.gv  game_tree_1.dot.gv  game_tree_10.dot.gv  game_tree_11.dot.gv  game_tree_12.dot.gv  game_tree_13.dot.gv  game_tree_14.dot.gv  game_tree_15.dot.gv  game_tree_16.dot.gv  game_tree_17.dot.gv  game_tree_18.dot.gv  game_tree_19.dot.gv  game_tree_2.dot.gv  game_tree_20.dot.gv  game_tree_21.dot.gv  game_tree_22.dot.gv  game_tree_23.dot.gv  game_tree_24.dot.gv  game_tree_25.dot.gv  game_tree_26.dot.gv  game_tree_27.dot.gv  game_tree_28.dot.gv  game_tree_29.dot.gv  game_tree_3.dot.gv  game_tree_30.dot.gv  game_tree_31.dot.gv  game_tree_32.dot.gv  game_tree_33.dot.gv  game_tree_34.dot.gv  game_tree_4.dot.gv  game_tree_5.dot.gv  game_tree_6.dot.gv  game_tree_7.dot.gv  game_tree_8.dot.gv  game_tree_9.dot.gv
problem951/test/: CMakeLists.txt  test_factorial.c  test_game_tree.c
